basic records display done

--- a/header.html
+++ b/header.html
@@ -1,6 +1,6 @@
 <div class="logo">🩺 <span>Moje Pomiary</span></div>
 <nav class="nav-links">
-  <a href="index.html">Pomiary</a>
+  <a href="measurements.html">Pomiary</a>
   <a href="charts.html">Wykresy</a>
   <a href="history.html">Historia pomiarów</a>
 </nav>
